@@ -21,8 +21,8 @@ import platform
 import sys
 from glob import glob
 
-if sys.version_info < (3, 8) or sys.version_info >= (3, 12):
-    sys.exit("\ncqlsh requires Python 3.8-3.11\n")
+if sys.version_info < (3, 6) or sys.version_info >= (3, 12):
+    sys.exit("\ncqlsh requires Python 3.6-3.11\n")
 
 # see CASSANDRA-10428
 if platform.python_implementation().startswith('Jython'):
